--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.4.0",
+    "expo": "^49.0.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.72.4",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^5.6.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^6.0.0"
   },
   "private": true
 }
